# machiver

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
fixtures/: manifest-sha256.txt  manifest-sha512.txt  remote-manifest-md5.txt
fixtures/dup-bag/: bag-info.txt  manifest-md5.txt  manifest-sha1.txt  tagmanifest-md5.txt  tagmanifest-sha1.txt
fixtures/good-bag/: bag-info.txt  manifest-md5.txt  manifest-sha1.txt  tagmanifest-md5.txt  tagmanifest-sha1.txt
script/: archive-photo.rb  dedup-bag.rb
spec/: dedup-bag_spec.rb
src/: copy.rs  date.rs  main.rs  manifest.rs
