[package]
name = "machiver"
version = "0.1.0"
edition = "2024"

[dependencies]
kamadak-exif = "0.6.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
md5 = "0.7"
sha2 = "0.10"
tokio = { version = "1.36", features = ["full"] }
async-std = "1.12"

[dev-dependencies]
tempfile = "3.10"
